Fixes to text and responsiveness

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="display-2">My Portfolio</h1>
             <h2 class="display-6">Welcome!</h2>
 
-            <p>Welcome! Here you can find some of my projects and activities throughout my university years. As a team member I've usually been the one who removes obstacles so that others can perform their role effectively. Right now I'm working on my own developer skills in both game and full stack development.</p>
+            <p>Here you can find some of my projects and activities throughout my university years. As a team member I've usually been the one who removes obstacles so that others can perform their role effectively. Right now I'm working on my own developer skills in both game and full stack development.</p>
           </section>
 
           <section class="projects">
